#108 FIX main nav right aligned elements with and without session

--- a/src/components/MainNav/MainNav.css
+++ b/src/components/MainNav/MainNav.css
@@ -76,14 +76,10 @@
   .mainnav__list__element--right {
     margin-left: auto;
   }
-}
-
-@media screen and (min-width: 600px) {
   .mainnav__list__element--rightest {
     margin-left: 0;
   }
 }
-
 .mainnav__list__element__link {
   color: #FFFFFF;
   text-decoration: none;
